# E3CNC_UI

./: .gitignore  AGENTS.md  CHANGELOG.md  IMPLEMENTATION_PLAN.md  README.md  STATUS.md  _e3cnc_deploy.py  _e3cnc_shared.py  _e3cnc_supervisor.py  bump-version.sh  deploy.sh  e3cnc-cli  e3cnc-tui  eslint.config.mjs  index.html  moonraker-cnc-update.conf  package-lock.json  package.json  vite.config.ts
.hermes/: batch-fix-store.py  edge-fix.py  final-fix.py  fix-mutations.py  fix-tests.py  precise-fix.py
E3CNC/moonraker-mcp/: README.md  moonraker.conf  pyproject.toml
E3CNC/moonraker-mcp/src/moonraker_mcp/: cnc_agent.py  mcp_server.py
E3CNC/moonraker-mcp/tests/: test_cnc_agent.py  test_mcp_server.py
agent_docs/: ARCHITECTURE.md  CONTRIBUTING.md  VUE_TYPESCRIPT.md
ansible/: ansible.cfg  requirements.yml
cli/: __init__.py  commands.py  helpers.py  keyreader.py  menu.py  parser.py
docs/: INSTALLATION.md  architecture.md  index.html  mainsail-fork-integration.md
klipper-macros/: README.md
macros/: e3cnc_macros.cfg
moonraker-cnc-agent/: README.md
prd/: 2026-07-01-ts-error-remediation.md  v0.8.0-release-article.md
scripts/: _gen_changelog.py  _get_changelog_entry.py  cnc_metadata_extractor.py  comment_mainsail_update_manager.py  download_frontend.sh  e3cnc-completion.sh  install_to_moonraker.sh  post_update.sh  restore_backup.sh  run-tests-batched.sh  uninstall.sh
specs/: ansible-migration-plan.md  cnc-cleanup-plan.md  vuetify-component-audit.md  wcs-integration.md
src/: App.vue  main.ts
tests/: Dockerfile.e3cnc-test  Dockerfile.fresh-install  setup.ts  (+8 more)
(+450 files in other folders)
